# MapleStory-remake

./: .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  claude.md  decompiled_iteminfo_structs.txt  list_ui_contents.cpp
docs/: ARCHITECTURE.md  CLogin_decompiled.md  CLogo_decompiled.md  CMapLoadable_decompiled.md  CUIChannelSelect_decompiled.md  LOGIN_UI_ARCHITECTURE.md  LayoutMan.md  background-type-system.md  gr2d-animate-architecture.md  gr2d-clean-code-improvements.md  gr2d-complete-architecture.md  gr2d-implementation-status.md  gr2d-refactoring-complete.md  phase4-verification-report.md
docs/plans/: 2026-01-31-debug-canvas-design.md  2026-01-31-debug-canvas-impl.md  2026-02-01-layoutman-design.md  2026-02-01-layoutman-implementation.md  2026-02-01-ui-debug-enhancement-design.md  2026-02-02-logo-loading-screen-design.md  2026-02-02-logo-loading-screen.md  2026-02-02-ui-lifecycle-implementation.md  2026-02-02-wz-dynamic-namespace-loading-design.md
docs/research/: AnimationDisplayer_analysis.md
docs/testing/: logo-loading-screen-manual-test.md
resources/: LoginBack.img.xml  Logo.img.xml  string.csv
scripts/: stringpool_xrefs.txt  update_string_csv.py
src/: main.cpp
src/animation/: ActionData.cpp  ActionData.h  ActionFrame.cpp  ActionFrame.h  ActionKey.h  ActionMan.cpp  ActionMan.h  AnimationDisplayer.cpp  AnimationDisplayer.h  CharacterActionFrameEntry.h  CharacterImgEntry.h  DragonAction.h  EmployeeAction.h  FaceLookEntry.h  LoadCharacterAction.cpp  LoadCharacterAction.h  LoadItemAction.cpp  LoadItemAction.h  MeleeAttackAfterimage.h  MobAction.h  MobImgEntry.h  MorphAction.h  MoveActionChange.h  NpcAction.h  PetAction.h  ShadowPartnerAction.h  SkillPetAction.h  SpriteInstance.cpp  SpriteInstance.h  SpriteSource.cpp  SpriteSource.h  SummonedAction.h  TamingMobActionFrameEntry.h
src/app/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  IGObj.h  IUpdatable.h  UpdateManager.cpp  UpdateManager.h  WvsContext.cpp  WvsContext.h
src/audio/: SoundMan.cpp  SoundMan.h  SoundSystem.cpp  SoundSystem.h
src/constants/: ActionConstants.cpp  ActionConstants.h  ActionHelpers.cpp  ActionHelpers.h  EquipDataPath.cpp  EquipDataPath.h  FieldConstants.cpp  FieldConstants.h  JobConstants.cpp  JobConstants.h  WeaponConstants.cpp  WeaponConstants.h
src/debug/: DebugOverlay.cpp  DebugOverlay.h
src/enums/: BodyPart.h  CharacterAction.h  MoveActionType.h  VecCtrlOwnerType.h
src/field/: CAttrField.h  LadderOrRope.h
src/field/foothold/: CAttrFoothold.h  FootholdSplit.h  IStaticFoothold.h  StaticFoothold.h
src/graphics/: AbsPosEx.h  CameraCtrl.cpp  CameraCtrl.h  Gr2DVector.cpp  Gr2DVector.h  IWzShape2D.h  IWzVector2D.h  RelPosEx.h  VecCtrl.cpp  VecCtrl.h  WzGr2D.cpp  WzGr2D.h  WzGr2DCanvas.cpp  WzGr2DCanvas.h  WzGr2DLayer.cpp  WzGr2DLayer.h  WzGr2DTypes.h
src/input/: InputSystem.cpp  InputSystem.h
src/life/: AttrShoe.h  IVecCtrlOwner.h  Life.cpp  Life.h  MpaInfo.h
src/life/movement/: MovePath.h  MovePathCommon.h
src/models/: GW_CashItemOption.cpp  GW_CashItemOption.h  GW_CharacterStat.h  GW_ItemSlotBase.cpp  GW_ItemSlotBase.h  GW_ItemSlotBundle.cpp  GW_ItemSlotBundle.h  GW_ItemSlotEquip.cpp  GW_ItemSlotEquip.h  GW_ItemSlotEquipBase.cpp  GW_ItemSlotEquipBase.h  GW_ItemSlotEquipOpt.h  GW_ItemSlotPet.cpp  GW_ItemSlotPet.h
src/network/: ClientSocket.cpp  ClientSocket.h  InPacket.cpp  InPacket.h  OutPacket.cpp  OutPacket.h
src/physics/: IWvsPhysicalSpace2D.h  WvsPhysicalSpace2D.cpp  WvsPhysicalSpace2D.h  b2Stub.h
src/sdk/spine-c/: BufferedStream.h  SkeletonAnimation.cpp  SkeletonAnimation.h  SpineExtension.cpp  SpineSkeletonBinary.cpp  SpineSkeletonBinary.h
src/stage/: Loading.cpp  Loading.h  Login.cpp  Login.h  Logo.cpp  Logo.h  MapLoadable.cpp  MapLoadable.h  MapViewStage.cpp  MapViewStage.h  Stage.cpp  Stage.h
src/templates/item/: Addition.h  AreaBuffItem.h  BagInfo.h  BitsCaseItem.h  BridleItem.h  BundleItem.h  CItemInfo.cpp  CItemInfo.h  CoreItem.h  CoupleChairItem.h  DayOfWeekItemStat.h  DecomposerInstallItem.h  DressUpClothesItem.h  DyeingItem.h  EquipItem.h  EquipSlotLevelMinusItem.h  ExpiredProtectingItem.h  ExtendExpireDateItem.h  FixedOption.h  GachaponAggScope.h  GachaponItemInfo.h  GatheringToolItem.h  GroupEffectInfo.h  GrowthOption.h  ItemHelper.cpp  ItemHelper.h  ItemInfo.cpp  ItemInfo.h  ItemInfoTypes.h  ItemName.h  ItemPotCreateItem.h  ItemPotCureItem.h  ItemSkill.h  KarmaScissorsItem.h  ParamEquipStat.h  PetFoodItem.h  PieceItemInfo.h  ProtectOnDieItem.h  RecipeOpenItem.h  SetAction.h  (+5 more)
src/templates/morph/: MorphTemplate.cpp  MorphTemplate.h
src/text/: TextRenderer.cpp  TextRenderer.h
src/ui/: CtrlButton.cpp  CtrlButton.h  CtrlScrollBar.cpp  CtrlScrollBar.h  CtrlToolTip.cpp  CtrlToolTip.h  CtrlWnd.cpp  CtrlWnd.h  IUIMsgHandler.h  LayoutMan.cpp  LayoutMan.h  UIButton.cpp  UIButton.h  UIChannelSelect.cpp  UIChannelSelect.h  UIEdit.cpp  UIEdit.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  UINewCharRaceSelect.cpp  UINewCharRaceSelect.h  UISelectChar.cpp  UISelectChar.h  UIToolTip.cpp  UIToolTip.h  UIWorldSelect.cpp  UIWorldSelect.h  Wnd.cpp  Wnd.h  WndMan.cpp  WndMan.h
src/user/: AvatarData.h  User.cpp  User.h  UserLocal.cpp  UserLocal.h
src/user/avatar/: Avatar.cpp  Avatar.h  AvatarLook.cpp  AvatarLook.h
src/util/: CCrc32.h  CFlag.h  FileTime.h  Logger.cpp  Logger.h  Point.h  Rand32.cpp  Rand32.h  Result.h  Singleton.cpp  Singleton.h  TRSTree.h  ZXString.cpp  ZXString.h
src/wz/: IWzSource.h  WzCanvas.cpp  WzCanvas.h  WzCrypto.cpp  WzCrypto.h  WzDirectory.cpp  WzDirectory.h  WzFile.cpp  WzFile.h  WzFormatDetector.cpp  WzFormatDetector.h  WzImage.cpp  WzImage.h  WzNode.cpp  WzNode.h  WzPackage.cpp  WzPackage.h  WzProperty.cpp  WzProperty.h  WzRaw.cpp  WzRaw.h  WzReader.cpp  WzReader.h  WzResMan.cpp  WzResMan.h  WzSourceFactory.cpp  WzSourceFactory.h  WzTypes.h  WzVideo.cpp  WzVideo.h
tests/: CMakeLists.txt  test_canvas.cpp  test_font_rawdata.cpp  test_gr2d_vector.cpp  test_item_info.cpp  test_layer_interpolation.cpp  test_packet.cpp  test_point.cpp  test_secure_tear.cpp  test_wz.cpp
tools/: map_viewer.cpp
(+9 files in other folders)
